[package]
name = "rustapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api"

[dependencies]
axum = "0.4.8"
reqwest = "0.11.10"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }